# xtblish-core

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  OTA-steps.md  README.md  dump_wasm0.wasm  prj.conf  stripped.wasm  wasm.cmake  west.yml  zetup.sh
.west/: config
application/: app.c  app.h  appq.h  main.c
application/app/: appq.h  handle.c  handle.h
application/assem/: asconfig.json  package-lock.json  package.json
application/assem/assembly/: index.ts
application/firmware/: app_handle.c  appq.h  image_handle.c  image_handle.h
application/network/: data.c  data.h  dns.c  dns.h  http.c  http.h  mqtt.c  mqtt.h  server.h  socket.c  socket.h  wifi.c  wifi.h
application/storage/: flash.c  flash.h
application/utils/: flash_util.c  flash_util.h
application/wasm/: bindings.c  bindings.h  wasm.c  wasm.h
boards/: esp32_devkitc_wroom_procpu.overlay  esp32s3_devkitc_procpu.conf  esp32s3_devkitc_procpu.overlay  esp32s3_devkitc_wroom_procpu.overlay
scripts/: create_binary.py  http_server.py  post.sh  release-board.sh  util_binary.py
